Integrate ImageCarousel component in the arkeologi index page for enhanced visual content display.

--- a/content/tema/arkeologi/index.mdx
+++ b/content/tema/arkeologi/index.mdx
@@ -9,6 +9,7 @@ asIndexPage: true
 
 import { Hero, HeroImage, HeroContent, HeroTitle, HeroDescription } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
+import { ImageCarousel } from '@/components/image-carousel'
 
 <Hero variant="arkeologi" className="bg-um-arkeologi-tint">
   <HeroImage src="/arkeologi-hero-ill.png" alt="Arkeologi" className="border-um-arkeologi-solid" />
@@ -33,7 +34,51 @@ Arkeologenes fotspor på gården Myklebust fanger opp en lang forskningstradisjo
 
 Arkivene gir museumsgjenstandene kontekst, noe som gjør disse arkivene til vår aller viktigste kilde til kunnskap om arkeologiske funn og automatisk fredete kulturminner i vårt museumsdistrikt.  
 
- 
+<ImageCarousel className="feature" title="I arkeologenes fotspor">
+  <ImageCarousel.Item 
+    image="/images/arkeologi/Tema-2021-Figur-1-Fosseringen-G-Hansen-750x615.jpg" 
+    imageAlt="Gravene på Myklebostad paa Nordfjordeid." 
+    title="Gravene på Myklebostad paa Nordfjordeid."
+  >
+    Figur 1. Gravene på Myklebostad paa Nordfjordeid. Shetelig BMÅ 1905 Vise til den digitaliserte fra UB? Gjenpart af Toldinspecteur, Stiftamtmand Christies antikvariske og nogle andre Optegnelser. (Med Penne Tegninger) 1 - Marcus
+  </ImageCarousel.Item>
+  <ImageCarousel.Item 
+    image="/images/arkeologi/tegning-myklebustmannen.png" 
+    imageAlt="Tegning av Myklebustmannen." 
+    title="Tegning av Myklebustmannen."
+  >
+    Figur 1. Gravene på Myklebostad paa Nordfjordeid. Shetelig BMÅ 1905 Vise til den digitaliserte fra UB? Gjenpart af Toldinspecteur, Stiftamtmand Christies antikvariske og nogle andre Optegnelser. (Med Penne Tegninger) 1 - Marcus
+  </ImageCarousel.Item>
+  <ImageCarousel.Item 
+    image="/images/arkeologi/Tema-2021-Figur-1-Fosseringen-G-Hansen-750x615.jpg" 
+    imageAlt="Gravene på Myklebostad paa Nordfjordeid." 
+    title="Gravene på Myklebostad paa Nordfjordeid."
+  >
+    Figur 1. Gravene på Myklebostad paa Nordfjordeid. Shetelig BMÅ 1905 Vise til den digitaliserte fra UB? Gjenpart af Toldinspecteur, Stiftamtmand Christies antikvariske og nogle andre Optegnelser. (Med Penne Tegninger) 1 - Marcus
+  </ImageCarousel.Item>
+  <ImageCarousel.Item 
+    image="/images/arkeologi/tegning-myklebustmannen.png" 
+    imageAlt="Tegning av Myklebustmannen." 
+    title="Tegning av Myklebustmannen."
+  >
+    Figur 1. Gravene på Myklebostad paa Nordfjordeid. Shetelig BMÅ 1905 Vise til den digitaliserte fra UB? Gjenpart af Toldinspecteur, Stiftamtmand Christies antikvariske og nogle andre Optegnelser. (Med Penne Tegninger) 1 - Marcus
+  </ImageCarousel.Item>
+  <ImageCarousel.Item 
+    image="/images/arkeologi/Tema-2021-Figur-1-Fosseringen-G-Hansen-750x615.jpg" 
+    imageAlt="Gravene på Myklebostad paa Nordfjordeid." 
+    title="Gravene på Myklebostad paa Nordfjordeid."
+  >
+    Figur 1. Gravene på Myklebostad paa Nordfjordeid. Shetelig BMÅ 1905 Vise til den digitaliserte fra UB? Gjenpart af Toldinspecteur, Stiftamtmand Christies antikvariske og nogle andre Optegnelser. (Med Penne Tegninger) 1 - Marcus
+  </ImageCarousel.Item>
+  <ImageCarousel.Item 
+    image="/images/arkeologi/tegning-myklebustmannen.png" 
+    imageAlt="Tegning av Myklebustmannen." 
+    title="Tegning av Myklebustmannen."
+  >
+    Figur 1. Gravene på Myklebostad paa Nordfjordeid. Shetelig BMÅ 1905 Vise til den digitaliserte fra UB? Gjenpart af Toldinspecteur, Stiftamtmand Christies antikvariske og nogle andre Optegnelser. (Med Penne Tegninger) 1 - Marcus
+  </ImageCarousel.Item>
+</ImageCarousel>
+
 Illustrasjoner og figurer:  
 
 Figur 1. Gravene på Myklebostad paa Nordfjordeid. Shetelig BMÅ 1905 Vise til den digitaliserte fra UB? Gjenpart af Toldinspecteur, Stiftamtmand Christies antikvariske og nogle andre Optegnelser. (Med Penne Tegninger) 1 - Marcus 
