Refactor Carousel items in index.mdx for improved readability and consistency in formatting.

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -28,30 +28,138 @@ import { Button } from '@/components/ui/button'
 </div>
 
 <Carousel title="En institusjon bygges" topic="Bygg" className="full">
-  <Carousel.Item year="1825" title="En institusjon blir til" href="https://www.universitetsmuseet.no/en-institusjon-blir-til" image="/images/en-institusjon-blir-til.jpg" imageAlt="En institusjon blir til" />
-  <Carousel.Item year="1825" title="En institusjon blir til" href="/en-institusjon-blir-til" image="/images/en-institusjon-blir-til.jpg" imageAlt="En institusjon blir til" />
-  <Carousel.Item year="1825" title="En institusjon blir til" href="/en-institusjon-blir-til" image="/images/en-institusjon-blir-til.jpg" imageAlt="En institusjon blir til" />
-  <Carousel.Item year="1825" title="En institusjon blir til" href="/en-institusjon-blir-til" image="/images/en-institusjon-blir-til.jpg" imageAlt="En institusjon blir til" />
-  <Carousel.Item year="1825" title="En institusjon blir til" href="/en-institusjon-blir-til" image="/images/en-institusjon-blir-til.jpg" imageAlt="En institusjon blir til" />
-  <Carousel.Item year="1825" title="En institusjon blir til" href="/en-institusjon-blir-til" image="/images/en-institusjon-blir-til.jpg" imageAlt="En institusjon blir til" />
+  <Carousel.Item 
+    year="1825" 
+    title="En institusjon blir til" 
+    href="https://www.universitetsmuseet.no/en-institusjon-blir-til" 
+    image="/images/en-institusjon-blir-til.jpg" 
+    imageAlt="En institusjon blir til" 
+  />
+  <Carousel.Item 
+    year="1825" 
+    title="En institusjon blir til" 
+    href="/en-institusjon-blir-til" 
+    image="/images/en-institusjon-blir-til.jpg" 
+    imageAlt="En institusjon blir til" 
+  />
+  <Carousel.Item 
+    year="1825" 
+    title="En institusjon blir til" 
+    href="/en-institusjon-blir-til" 
+    image="/images/en-institusjon-blir-til.jpg" 
+    imageAlt="En institusjon blir til" 
+  />
+  <Carousel.Item 
+    year="1825" 
+    title="En institusjon blir til" 
+    href="/en-institusjon-blir-til" 
+    image="/images/en-institusjon-blir-til.jpg" 
+    imageAlt="En institusjon blir til" 
+  />
+  <Carousel.Item 
+    year="1825" 
+    title="En institusjon blir til" 
+    href="/en-institusjon-blir-til" 
+    image="/images/en-institusjon-blir-til.jpg" 
+    imageAlt="En institusjon blir til" 
+  />
+  <Carousel.Item 
+    year="1825" 
+    title="En institusjon blir til" 
+    href="/en-institusjon-blir-til" 
+    image="/images/en-institusjon-blir-til.jpg" 
+    imageAlt="En institusjon blir til" 
+  />
 </Carousel>
 
 <Carousel title="En institusjon bygges" topic="Bygg" className="full">
-  <Carousel.Item year="1825" title="En institusjon blir til" href="https://www.universitetsmuseet.no/en-institusjon-blir-til" image="/images/en-institusjon-blir-til.jpg" imageAlt="En institusjon blir til" />
-  <Carousel.Item year="1825" title="En institusjon blir til" href="/en-institusjon-blir-til" image="/images/en-institusjon-blir-til.jpg" imageAlt="En institusjon blir til" />
-  <Carousel.Item year="1825" title="En institusjon blir til" href="/en-institusjon-blir-til" image="/images/en-institusjon-blir-til.jpg" imageAlt="En institusjon blir til" />
-  <Carousel.Item year="1825" title="En institusjon blir til" href="/en-institusjon-blir-til" image="/images/en-institusjon-blir-til.jpg" imageAlt="En institusjon blir til" />
-  <Carousel.Item year="1825" title="En institusjon blir til" href="/en-institusjon-blir-til" image="/images/en-institusjon-blir-til.jpg" imageAlt="En institusjon blir til" />
-  <Carousel.Item year="1825" title="En institusjon blir til" href="/en-institusjon-blir-til" image="/images/en-institusjon-blir-til.jpg" imageAlt="En institusjon blir til" />
+  <Carousel.Item 
+    year="1825" 
+    title="En institusjon blir til" 
+    href="https://www.universitetsmuseet.no/
+    en-institusjon-blir-til" image="/images/en-institusjon-blir-til.jpg" 
+    imageAlt="En institusjon blir til" 
+  />
+  <Carousel.Item 
+    year="1825" 
+    title="En institusjon blir til" 
+    href="/en-institusjon-blir-til" 
+    image="/images/en-institusjon-blir-til.jpg" 
+    imageAlt="En institusjon blir til" 
+  />
+  <Carousel.Item 
+    year="1825" 
+    title="En institusjon blir til" 
+    href="/en-institusjon-blir-til" 
+    image="/images/en-institusjon-blir-til.jpg" 
+    imageAlt="En institusjon blir til" 
+  />
+  <Carousel.Item 
+    year="1825" 
+    title="En institusjon blir til" 
+    href="/en-institusjon-blir-til" 
+    image="/images/en-institusjon-blir-til.jpg" 
+    imageAlt="En institusjon blir til" 
+  />
+  <Carousel.Item 
+    year="1825" 
+    title="En institusjon blir til" 
+    href="/en-institusjon-blir-til" 
+    image="/images/en-institusjon-blir-til.jpg" 
+    imageAlt="En institusjon blir til" 
+  />
+  <Carousel.Item 
+    year="1825" 
+    title="En institusjon blir til" 
+    href="/en-institusjon-blir-til" 
+    image="/images/en-institusjon-blir-til.jpg" 
+    imageAlt="En institusjon blir til" 
+  />
 </Carousel>
 
 <Carousel title="En institusjon bygges" topic="Bygg" className="full">
-  <Carousel.Item year="1825" title="En institusjon blir til" href="https://www.universitetsmuseet.no/en-institusjon-blir-til" image="/images/en-institusjon-blir-til.jpg" imageAlt="En institusjon blir til" />
-  <Carousel.Item year="1825" title="En institusjon blir til" href="/en-institusjon-blir-til" image="/images/en-institusjon-blir-til.jpg" imageAlt="En institusjon blir til" />
-  <Carousel.Item year="1825" title="En institusjon blir til" href="/en-institusjon-blir-til" image="/images/en-institusjon-blir-til.jpg" imageAlt="En institusjon blir til" />
-  <Carousel.Item year="1825" title="En institusjon blir til" href="/en-institusjon-blir-til" image="/images/en-institusjon-blir-til.jpg" imageAlt="En institusjon blir til" />
-  <Carousel.Item year="1825" title="En institusjon blir til" href="/en-institusjon-blir-til" image="/images/en-institusjon-blir-til.jpg" imageAlt="En institusjon blir til" />
-  <Carousel.Item year="1825" title="En institusjon blir til" href="/en-institusjon-blir-til" image="/images/en-institusjon-blir-til.jpg" imageAlt="En institusjon blir til" />
+  <Carousel.Item 
+    year="1825" 
+    title="En institusjon blir til" 
+    href="https://www.universitetsmuseet.no/
+    en-institusjon-blir-til" image="/images/en-institusjon-blir-til.jpg" 
+    imageAlt="En institusjon blir til" 
+  />
+  <Carousel.Item 
+    year="1825" 
+    title="En institusjon blir til" 
+    href="/en-institusjon-blir-til" 
+    image="/images/en-institusjon-blir-til.jpg" 
+    imageAlt="En institusjon blir til" 
+  />
+  <Carousel.Item 
+    year="1825" 
+    title="En institusjon blir til" 
+    href="/en-institusjon-blir-til" 
+    image="/images/en-institusjon-blir-til.jpg" 
+    imageAlt="En institusjon blir til" 
+  />
+  <Carousel.Item 
+    year="1825" 
+    title="En institusjon blir til" 
+    href="/en-institusjon-blir-til" 
+    image="/images/en-institusjon-blir-til.jpg" 
+    imageAlt="En institusjon blir til" 
+  />
+  <Carousel.Item 
+    year="1825" 
+    title="En institusjon blir til" 
+    href="/en-institusjon-blir-til" 
+    image="/images/en-institusjon-blir-til.jpg" 
+    imageAlt="En institusjon blir til" 
+  />
+  <Carousel.Item 
+    year="1825" 
+    title="En institusjon blir til" 
+    href="/en-institusjon-blir-til" 
+    image="/images/en-institusjon-blir-til.jpg" 
+    imageAlt="En institusjon blir til" 
+  />
 </Carousel>
 
 </ContentGrid>
