--- a/content/tema/bokstaver-og-tegn/index.mdx
+++ b/content/tema/bokstaver-og-tegn/index.mdx
@@ -31,7 +31,7 @@ Etter kristningen av landet i 1020-året kom det latinske skriftspråket for ful
 
 Den europeiske boktrykkerkunsten ble oppfunnet i første halvdel av 1400-tallet. Med den ble det også et større behov for bokbindere og økt etterspørsel etter materiale til innbinding. Fragmenter av slike gamle pergamenthåndskrifter finner vi derfor også på de stedene man ikke nødvendigvis ser! Oppkuttet i små biter ligger håndskrift og gamle notetegn gjemt inni bokens indre oppbygging, gjerne som forsterking i bokryggen, eller hvis vi er ekstra heldige er pergament-boksiden gjenbrukt som bokbind!
 
-{/* <Cards title="Bokstaver og tegn i samlingene">
+<Cards title="Bokstaver og tegn i samlingene">
   
   <Card title="Christie og de «mærkelige Fiske»" 
   description="" 
@@ -53,6 +53,6 @@ Den europeiske boktrykkerkunsten ble oppfunnet i første halvdel av 1400-tallet.
   description="" 
   image="/nav-card-images/vintage-fish-illustration.jpg" 
   imageAlt="Fisk" href="/tema/fisk/christie-og-de-maerkelige-fiske" />
-</Cards> */}
+</Cards>
 
 </ContentGrid>
