Update font class for Digitalarkivet in ressurser.mdx and define new font variable in globals.css.

--- a/content/ressurser.mdx
+++ b/content/ressurser.mdx
@@ -59,7 +59,7 @@ import { ResourceGrid } from '@/components/resource-grid'
           height={50}
           className="object-contain"
         />
-        <div className="text-3xl font-serif uppercase">Digitalarkivet</div>
+        <div className="text-3xl font-digitalarkivet uppercase">Digitalarkivet</div>
       </div>
     }
     links={[
