Refactor 'Menneskene' page to use Card components for displaying individuals, enhancing layout and visual presentation.

--- a/content/menneskene.mdx
+++ b/content/menneskene.mdx
@@ -2,10 +2,65 @@
 title: Menneskene
 ---
 
+import {Cards, Card} from '@/components/card'
+
 <ContentGrid>
 
-# Menneskene
+<div className="text-xl text-center pb-20">
+  <h1 className="text-5xl text-center">— Menneskene —</h1>
+  Her er en liste over menneskene som har...
+</div>
 
-Her er en liste over menneskene som er tilgjengelige for å bruke i utstillingen.
+<Cards>
+  <Card 
+    title="Christie"
+    description="Les om Christie" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="Portrett av Chrisite" 
+    href="https://marcus.uib.no"
+  />
+  <Card 
+    title="Christie"
+    description="Les om Christie" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="Portrett av Chrisite" 
+    href="https://marcus.uib.no"
+  />
+  <Card 
+    title="Christie"
+    description="Les om Christie" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="Portrett av Chrisite" 
+    href="https://marcus.uib.no"
+  />
+  <Card 
+    title="Christie"
+    description="Les om Christie" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="Portrett av Chrisite" 
+    href="https://marcus.uib.no"
+  />
+  <Card 
+    title="Christie"
+    description="Les om Christie" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="Portrett av Chrisite" 
+    href="https://marcus.uib.no"
+  />
+  <Card 
+    title="Christie"
+    description="Les om Christie" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="Portrett av Chrisite" 
+    href="https://marcus.uib.no"
+  />
+  <Card 
+    title="Christie"
+    description="Les om Christie" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="Portrett av Chrisite" 
+    href="https://marcus.uib.no"
+  />
+</Cards>
 
 </ContentGrid>
