fikset feil med semikolon

--- a/content/tema/bokstaver-og-tegn/index.mdx
+++ b/content/tema/bokstaver-og-tegn/index.mdx
@@ -39,7 +39,7 @@ Den europeiske boktrykkerkunsten ble oppfunnet i første halvdel av 1400-tallet.
   imageAlt="Fisk" href="/tema/fisk/christie-og-de-maerkelige-fiske" />
 
 <Card title="Runepinner fra Bergen" 
-  description="Ojda, les mer om det utsvevende språket på runepinnene i "200 Fortellinger"" 
+  description="Ojda, les mer om det utsvevende språket på runepinnene i &quot;200 Fortellinger&quot;" 
   image="/nav-card-images/vintage-fish-illustration.jpg" 
   imageAlt="Runepinne" 
   href="https://tohundrefortellinger.w.uib.no/1979/09/15/1979-frekke-runepinner-fra-bryggen/" />
