så side-endringene

--- a/content/tema/fisk/christie-og-de-maerkelige-fiske.mdx
+++ b/content/tema/fisk/christie-og-de-maerkelige-fiske.mdx
@@ -32,11 +32,7 @@ Den mest fargesterke Uer-varianten i samlingene ble laget av den norske naturfor
 
 Blant de mange originaltegningene av fisk i Christies arkiv finnes det tegninger som er kopiert etter nettopp Ascanius og Heltzen. Tegningene deres ble altså brukt som forelegg for nye tegninger av innsamlede fisker ved Bergens Museum. Selv om disse nye tegningene og akvarellene er svært varierende i både vitenskapelig og kunstnerisk utførelse, er de viktige som dokumentasjon av museets tidlige fiskesamlinger. 
 
-<aside>
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-</aside>
-
-## Hvalsalen
-Fascinasjonen for «mærkelige» fisk og ikke minst for det som skjuler seg i dyphavene, både uer og mer obskure arter, er høyst levende også i dag. I den ærverdige Hvalsalen på Naturhistorisk museum finnes det en monterutstilling om «Gåtefulle fisk», en tittel Christie hadde nikket gjenkjennende til og som synliggjør de lange linjene i forskningen ved museet. 
+## «Gåtefulle fisk»
+Fascinasjonen for «mærkelige» fisk og ikke minst for det som skjuler seg i dyphavene, både uer og mer obskure arter, er høyst levende også i dag. I den ærverdige Hvalsalen på Naturhistorisk museum finnes det en monterutstilling om «Gåtefulle fisk», en tittel Christie hadde nikket gjenkjennende til og som synliggjør de lange linjene i forskningen ved museet.
 
 </ContentGrid>
