--- a/content/tema/fisk/thorholv-rasmussen.mdx
+++ b/content/tema/fisk/thorholv-rasmussen.mdx
@@ -13,6 +13,6 @@ keywords:
 # Thorolv Rasmussen
 
 På Norskehavstoktet med «S/S Michael Sars» i 1910 deltok bergenskunstneren Thorolv Rasmussen, som førte til at Universitetsmuseet i Bergen i dag har en skatt av kaldnålstegninger og de tilhørende objektene av skapninger fra havets dyp.
-Les mer om Thorolv Rasmussen i &quot;200 Fortellinger&quot;: <a href="https://tohundrefortellinger.w.uib.no/1910/09/26/1910-kunsten-a-tegne-fisk-thorolv-rasmussen/"><span style="color: #0E2841;">1910 Thorolv Rasmussen – eller «kunsten å tegne fisk» – To hundre fortellinger på to hundre år</span></a>.
+Les mer om Thorolv Rasmussen i &quot;200 Fortellinger&quot;: <a href="https://tohundrefortellinger.w.uib.no/1910/09/26/1910-kunsten-a-tegne-fisk-thorolv-rasmussen/">1910 Thorolv Rasmussen – eller «kunsten å tegne fisk» – To hundre fortellinger på to hundre år</a>.
 
 </ContentGrid>
