--- a/content/tema/fisk/index.mdx
+++ b/content/tema/fisk/index.mdx
@@ -47,13 +47,11 @@ Foruten en mengde publiserte gamle plansjeverk med trykte fiskeillustrasjoner, f
   href="/tema/fisk/thorholv-rasmussen" />
 
 <Card title="Peter Stuwitz" 
-  description="Les om Peter Stuwitz' til museets historie." 
+  description="Les om Peter Stuwitz' bidrag til museets historie." 
   image="/nav-card-images/ubb-ms-0311-a-001-icon.jpg" 
   imageAlt="Fisk" 
   href="/tema/fisk/peter-stuwitz" />
 
 </Cards>
-
-Fjern meg
 
 </ContentGrid>
