lagt til tekst på dyr og et bilde

--- a/content/tema/dyr/index.mdx
+++ b/content/tema/dyr/index.mdx
@@ -33,11 +33,43 @@ Før museets konservator James Grieg startet arbeidet med undersøkelse og disse
 Sammen med notater, tegninger og fotografier er det bevart biologiske prøver av hvalens pannefure. Skjelettet til Nordspisshvalen henger i taket i den ikoniske hvalsalen på Naturhistorisk museum, ikke så langt fra monteren der dens artsfrende, Gåsenebbhvalen -den berømte plasthvalen funnet på Sotra i 2017 – er utstilt. 
 
 <Cards title="Historier om dyr">
-  <Card title="Kvalsalen" description="Beskrivelse av kvalsalen" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="" href="/tema/dyr/kvalsalen" />
-  <Card title="Bucher og blåkvalen" description="Beskrivelse av bucher og blåkvalen" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="" href="/tema/dyr/bucher-og-blaakvalen" />
-  <Card title="James Grieg" description="Beskrivelse av James Grieg" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="" href="/tema/dyr/james-grieg" />
-  <Card title="Kaffe og elskov i blåhvalens buk" description="Beskrivelse av kaffe og elskov i blåhvalens buk" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="" href="/tema/dyr/kaffe-og-elskov-i-blaahvalens-buk" />
-  <Card title="Plastkvalen" description="Beskrivelse av plastkvalen" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="" href="/tema/dyr/plastkvalen" />
+
+  <Card title="Kvalsalen" 
+  description="Beskrivelse av kvalsalen" 
+  image="/nav-card-images/ubb-kk-nsx-0206-icon.jpg" 
+  imageAlt="Gammelt bilde av hvalsalen" 
+  href="/tema/dyr/kvalsalen" />
+  
+  <Card title="Bucher og blåkvalen" 
+  description="<illustratørens kunstverk>" 
+  image="/nav-card-images/ubb-ms-2310-icon.jpg" 
+  imageAlt="Blåhval" 
+  href="/tema/dyr/bucher-og-blaakvalen" />
+  
+  <Card title="James A. Grieg" 
+  description="Beskrivelse av James Grieg" 
+  image="/nav-card-images/ubb-bs-fol-01796-icon.jpg" 
+  imageAlt="Portrett av James Grieg" 
+  href="/tema/dyr/james-grieg" />
+  
+  <Card title="Kaffe og elskov i blåhvalens buk" 
+  description="Beskrivelse av kaffe og elskov i blåhvalens buk" 
+  image="/nav-card-images/ubb-spesmag-f-0062-005-icon.jpg" 
+  imageAlt="utstoppet hval" 
+  ref="/tema/dyr/kaffe-og-elskov-i-blaahvalens-buk" />
+  
+  <Card title="Mollusker og marginalia" 
+  description="Beskrivelse av plastkvalen" 
+  image="/nav-card-images/ubb-ms-0644-001-icon.jpg" 
+  imageAlt="Tegninger av skjell" 
+  href="/tema/dyr/mollusker-og-marginalia" />
+
+<Card title="Plastkvalen" 
+description="Beskrivelse av plastkvalen" 
+image="/nav-card-images/uib-terje-lislevand-plasthvalen-utsnitt-icon.jpg" 
+imageAlt="Utsnitt med hvalhale" 
+href="/tema/dyr/plastkvalen" />
+
 </Cards>
 
 </ContentGrid>
