Refactor image carousel and update archaeological content
- Improved layout and styling of the image carousel component for better responsiveness.
- Updated image descriptions and figures in the archaeological section for clarity and accuracy.
- Removed redundant titles and adjusted image sizes for consistency.

--- a/content/tema/arkeologi/index.mdx
+++ b/content/tema/arkeologi/index.mdx
@@ -37,67 +37,50 @@ Arkivene gir museumsgjenstandene kontekst, noe som gjør disse arkivene til vår
 <ImageCarousel className="feature" title="I arkeologenes fotspor">
   <ImageCarousel.Item 
     image="/images/arkeologi/Tema-2021-Figur-1-Fosseringen-G-Hansen-750x615.jpg" 
-    imageAlt="Gravene på Myklebostad paa Nordfjordeid." 
-    title="Gravene på Myklebostad paa Nordfjordeid."
+    imageAlt="Gravene på Myklebostad paa Nordfjordeid."
   >
     Figur 1. Gravene på Myklebostad paa Nordfjordeid. Shetelig BMÅ 1905 Vise til den digitaliserte fra UB? Gjenpart af Toldinspecteur, Stiftamtmand Christies antikvariske og nogle andre Optegnelser. (Med Penne Tegninger) 1 - Marcus
   </ImageCarousel.Item>
   <ImageCarousel.Item 
     image="/images/arkeologi/tegning-myklebustmannen.png" 
-    imageAlt="Tegning av Myklebustmannen." 
-    title="Tegning av Myklebustmannen."
+    imageAlt="Tegning av Myklebustmannens."
   >
-    Figur 1. Gravene på Myklebostad paa Nordfjordeid. Shetelig BMÅ 1905 Vise til den digitaliserte fra UB? Gjenpart af Toldinspecteur, Stiftamtmand Christies antikvariske og nogle andre Optegnelser. (Med Penne Tegninger) 1 - Marcus
+    Figur 2. Bronsekjelen funnet i 1874 av Lorange 
   </ImageCarousel.Item>
   <ImageCarousel.Item 
     image="/images/arkeologi/Tema-2021-Figur-1-Fosseringen-G-Hansen-750x615.jpg" 
-    imageAlt="Gravene på Myklebostad paa Nordfjordeid." 
-    title="Gravene på Myklebostad paa Nordfjordeid."
+    imageAlt="Gravene på Myklebostad paa Nordfjordeid."
   >
-    Figur 1. Gravene på Myklebostad paa Nordfjordeid. Shetelig BMÅ 1905 Vise til den digitaliserte fra UB? Gjenpart af Toldinspecteur, Stiftamtmand Christies antikvariske og nogle andre Optegnelser. (Med Penne Tegninger) 1 - Marcus
+    Figur 3. Tegning av Myklebustmannen 
   </ImageCarousel.Item>
   <ImageCarousel.Item 
     image="/images/arkeologi/tegning-myklebustmannen.png" 
-    imageAlt="Tegning av Myklebustmannen." 
-    title="Tegning av Myklebustmannen."
+    imageAlt="Tegning av Myklebustmannen."
   >
-    Figur 1. Gravene på Myklebostad paa Nordfjordeid. Shetelig BMÅ 1905 Vise til den digitaliserte fra UB? Gjenpart af Toldinspecteur, Stiftamtmand Christies antikvariske og nogle andre Optegnelser. (Med Penne Tegninger) 1 - Marcus
+    Figur 4. Foto av utgravning 
   </ImageCarousel.Item>
   <ImageCarousel.Item 
     image="/images/arkeologi/Tema-2021-Figur-1-Fosseringen-G-Hansen-750x615.jpg" 
-    imageAlt="Gravene på Myklebostad paa Nordfjordeid." 
-    title="Gravene på Myklebostad paa Nordfjordeid."
+    imageAlt="Gravene på Myklebostad paa Nordfjordeid."
   >
-    Figur 1. Gravene på Myklebostad paa Nordfjordeid. Shetelig BMÅ 1905 Vise til den digitaliserte fra UB? Gjenpart af Toldinspecteur, Stiftamtmand Christies antikvariske og nogle andre Optegnelser. (Med Penne Tegninger) 1 - Marcus
+    Figur 5. Shetelig sin rapport fra 1902 
+  </ImageCarousel.Item>
+  <ImageCarousel.Item 
+    image="/images/arkeologi/Tema-2021-Figur-1-Fosseringen-G-Hansen-750x615.jpg" 
+    imageAlt="Gravene på Myklebostad paa Nordfjordeid."
+  >
+    Figur 6. Utstillingstekst. Formidling av arkeologi i utstilling. 
   </ImageCarousel.Item>
   <ImageCarousel.Item 
     image="/images/arkeologi/tegning-myklebustmannen.png" 
-    imageAlt="Tegning av Myklebustmannen." 
-    title="Tegning av Myklebustmannen."
+    imageAlt="Tegning av Myklebustmannen."
   >
-    Figur 1. Gravene på Myklebostad paa Nordfjordeid. Shetelig BMÅ 1905 Vise til den digitaliserte fra UB? Gjenpart af Toldinspecteur, Stiftamtmand Christies antikvariske og nogle andre Optegnelser. (Med Penne Tegninger) 1 - Marcus
+    Figur 7. Tegning utført av E. Mehl. 
   </ImageCarousel.Item>
 </ImageCarousel>
 
-Illustrasjoner og figurer:  
-
-Figur 1. Gravene på Myklebostad paa Nordfjordeid. Shetelig BMÅ 1905 Vise til den digitaliserte fra UB? Gjenpart af Toldinspecteur, Stiftamtmand Christies antikvariske og nogle andre Optegnelser. (Med Penne Tegninger) 1 - Marcus 
-
-Figur 2. Bronsekjelen funnet i 1874 av Lorange 
-
-Figur 3. Tegning av Myklebustmannen 
-
-Figur 4. Foto av utgravning 
-
-Figur 5. Shetelig sin rapport fra 1902 
-
-Figur 5. Utstillingstekst. Formidling av arkeologi i utstilling. 
-
-Figur 6. Tegning utført av E. Mehl. 
-
- 
 <Cards title="Historier om arkeologi">
- <Card 
+  <Card 
     title="Myklebustskipet" 
     description="Les mer om den storslåtte skipsgraven fra vikingtid funnet på gården Myklebust" 
     image="/images/arkeologi/B2978_Myklebustmannen.jpg" 
@@ -106,7 +89,7 @@ Figur 6. Tegning utført av E. Mehl.
   />
   <Card 
     title="Gravritualer i vikingtid" 
-    description="Er du nysgjerrig på hvordan gravritualer kan ha foregått i Vikingtiden? Da anbefaler vi at du ser denne filmen laget av Archeion" 
+    description="Er du nysgjerrig på hvordan &quot;gravritualer&quot; kan ha foregått i Vikingtiden? Da anbefaler vi at du ser denne filmen laget av Archeion" 
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="" 
     href="/tema/arkeologi/det-brente-skipet" 
