lagt til tekst og fikset feil

--- a/content/tema/dyr/plastkvalen.mdx
+++ b/content/tema/dyr/plastkvalen.mdx
@@ -12,4 +12,5 @@ keywords:
 # Plastkvalen
 Lørdag 29. januar 2017 låg det ein kval og duppa heilt inne i fjøra ved Vindenes på Sotra. Det var tydeleg at han var sjuk, og etter kvart vart dyret difor avliva. Det som seinare hende gjorde kvalen frå Vindenes kjent over heile verda.
 
-Les mer om Plasthvalen i &quot;200 Fortellinger&quot;: <a href="https://tohundrefortellinger.w.uib.no/2017/01/01/2017-plasthvalen/">2017 Plastkvalen – kvalen som vart eit miljøsymbol – To hundre fortellinger på to hundre år</a>.
+Les mer om Plasthvalen i "200 Fortellinger": <a href="https://tohundrefortellinger.w.uib.no/2017/01/01/2017-plasthvalen/">2017 Plastkvalen – kvalen som vart eit miljøsymbol – To hundre fortellinger på to hundre år</a>.
+</ContentGrid>
