fikset feil tegnsetting

--- a/content/tema/dyr/index.mdx
+++ b/content/tema/dyr/index.mdx
@@ -41,13 +41,13 @@ Sammen med notater, tegninger og fotografier er det bevart biologiske prøver av
   href="/tema/dyr/kvalsalen" />
   
   <Card title="Bucher og blåkvalen" 
-  description="<illustratørens kunstverk>" 
+  description="Illustratørens kunstverk" 
   image="/nav-card-images/ubb-ms-2310-icon.jpg" 
   imageAlt="Blåhval" 
   href="/tema/dyr/bucher-og-blaakvalen" />
   
   <Card title="James A. Grieg" 
-  description="Beskrivelse av James Grieg" 
+  description="Beskrivelse av James Alexanderssøn Grieg" 
   image="/nav-card-images/ubb-bs-fol-01796-icon.jpg" 
   imageAlt="Portrett av James Grieg" 
   href="/tema/dyr/james-grieg" />
