--- a/content/tema/dyr/index.mdx
+++ b/content/tema/dyr/index.mdx
@@ -56,7 +56,7 @@ Sammen med notater, tegninger og fotografier er det bevart biologiske prøver av
   description="Beskrivelse av kaffe og elskov i blåhvalens buk" 
   image="/nav-card-images/ubb-spesmag-f-0062-005-icon.jpg" 
   imageAlt="utstoppet hval" 
-  ref="/tema/dyr/kaffe-og-elskov-i-blaahvalens-buk" />
+  href="/tema/dyr/kaffe-og-elskov-i-blaahvalens-buk" />
   
   <Card title="Mollusker og marginalia" 
   description="Beskrivelse av plastkvalen" 
